# SmartHospitalAI

./: .coverage  .dockerignore  .env.example  .gitignore  DOCKER_INSTRUCTIONS.md  Dockerfile  FINAL_SUBMISSION_STATUS.md  HF_DEPLOYMENT_CHECKLIST.md  LICENSE  README.md  ROADMAP.md  __init__.py  app.py  docker-compose.yml  health_check.ps1  inference.py  openenv.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run_baseline.py  run_multi_agent_baseline.py  run_official_validation.py  test_data_correctness.py  verify_docker.ps1  web_interface.py
agent/: __init__.py  base_agent.py  multi_agent_extension.py  policy_network.py  random_agent.py
config/: config_loader.py  default_config.py
config/configs/: hard.yaml
environment/: doctors.py  hospital_env.py  patients.py  resources.py
evaluation/: grader.py
inference/: __main__.py  baseline_inference.py
results/: constraint_proof_benchmark.json  constraint_proof_docker.json  grader_easy.json  live_llm_baseline_proof.json  submission_artifact_verification.json
results/grader_history/: grader_hard_20260408T084832Z.json  grader_medium_20260406T215840Z.json  grader_medium_20260408T084831Z.json
reward/: __init__.py  reward_components.py
server/: app.py
smart_hospital_orchestration/: .env.example  .gitignore  Dockerfile  FINAL_SUBMISSION_STATUS.md  HF_DEPLOYMENT_CHECKLIST.md  README.md  ROADMAP.md  app.py  deploy_hf_space.ps1  inference.py  main.py  openenv.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run_multi_agent_baseline.py  test_reward_system.py  web_interface.py
smart_hospital_orchestration/agent/: action_space.py  heuristic_agent.py
smart_hospital_orchestration/config/: __init__.py  config_validator.py
smart_hospital_orchestration/environment/: __init__.py  action_system.py  gym_adapter.py
smart_hospital_orchestration/evaluation/: __init__.py  generate_benchmark_dashboard.py  grader.py
smart_hospital_orchestration/inference/: __init__.py  baseline_inference.py
smart_hospital_orchestration/models/: __init__.py  typed_models.py
smart_hospital_orchestration/reward/: advanced_reward.py  reward_function.py  reward_shaping.py
state/: __init__.py  state_normalizer.py  state_representation.py
submission_package/: Dockerfile  KEY_ROTATION_GUIDE.md  OPENENV_VALIDATE_EVIDENCE.md  PROOF_CAPTURE_TEMPLATE.md  grader_result.json  multi_agent_weights.json  openenv.yaml  openenv_official_validate.txt  openenv_validate_latest.txt  openenv_validate_success.txt  reward_ablation_report.json  stress_test_report.json
tasks/: advanced_tasks.py  hard_config.py
templates/: 3d_view.html  base.html  benchmark_dashboard_page.html  clinical_ops.html  controls.html  dashboard.html  overview.html
tests/: __init__.py  test_action_system.py  test_reward.py  test_state.py  test_tasks.py
training/: train_multi_agent_weights.py
validation/: generate_constraint_proof.py  generate_docker_constraint_proof.py  generate_live_llm_proof.py  generate_reward_ablation_report.py  run_stress_tests.py  validate_env.py
(+33 files in other folders)
