[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server"]

[project]
name = "smart-hospital-orchestration"
version = "0.1.0"
description = "AI Smart Hospital Resource Orchestration Environment"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pyyaml",
    "gymnasium",
    "pandas",
    "torch",
    "pydantic",
    "flask",
    "requests",
    "openai",
    "openenv==0.1.13"
]

[project.scripts]
start = "server.app:main"
server = "server.app:main"